--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/social-network
+spring.datasource.url=jdbc:mysql://localhost:3306/social_network
+spring.datasource.username=root
+spring.datasource.password=root123
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
